layout bug fix

--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ body {
 
     margin-top:8px;
 
-    width:calc(800px - 16px);
+    width:800px;
   }
 
   .permItem {
